2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-actiondialog.c:
	* src/universal-cp-devicetreeview.c:

	Fix some ref leaks and a small stylistic change.

2007-09-11  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-eventtreeview.c:

	Bugfix: Don't leave out the 'value' when copying the event(s).

2007-09-11  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-actiondialog.c:
	* src/universal-cp-actiondialog.h:
	* src/universal-cp-detailstreeview.c:
	* src/universal-cp-detailstreeview.h:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-devicetreeview.h:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-eventtreeview.h:
	* src/universal-cp-gui.c:
	* src/universal-cp-gui.h:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	Cleanup: No shared global variables between modules and every module
	communicate with the others through function calls only.

2007-09-10  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:
	* src/pixmaps/action.png:
	* src/pixmaps/device.png:
	* src/pixmaps/network.png:
	* src/pixmaps/service.png:
	* src/pixmaps/state-variable.png:
	* src/pixmaps/state-variables.png:
	* src/pixmaps/upnp-action.png:
	* src/pixmaps/upnp-device.png:
	* src/pixmaps/upnp-network.png:
	* src/pixmaps/upnp-service.png:
	* src/pixmaps/upnp-state-variable.png:
	* src/pixmaps/upnp-state-variables.png:
	* src/universal-cp-icons.c:

	Add 'upnp-' prefix to all universal-cp icons.

2007-09-10  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:
	* src/pixmaps/devices.png:
	* src/pixmaps/network.png:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	Rename "UPnP Devices" to "UPnP Network" everwhere.

2007-09-10  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Use the id instead of SCPD URL of the service in the warning message.

2007-09-09  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:
